tests/scripts/impl.hk.tr.err
[stdin]:12
void (println(p.distance_from_origin()));
                ^

TypeError: Cannot read properties of undefined (reading 'distance_from_origin')
    at [stdin]:12:17
    at runScriptInThisContext (node:internal/vm:218:10)
    at node:internal/process/execution:456:12
    at [stdin]-wrapper:6:24
    at runScriptInContext (node:internal/process/execution:454:60)
    at evalFunction (node:internal/process/execution:286:30)
    at evalTypeScript (node:internal/process/execution:298:3)
    at node:internal/main/eval_stdin:51:5
    at ReadStream.<anonymous> (node:internal/process/execution:206:5)
    at ReadStream.emit (node:events:507:28)

Node.js v24.2.0
